--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .container {
-    height: 400px;
+    min-height: 400px;
     min-width: 260px;
     background: #DDE1E7;
     border-radius: 18px;
@@ -90,11 +90,6 @@ form .equal {
     box-shadow: -5px -5px 9px rgba(255, 255, 255, 0.45), 3px 3px 9px rgba(94, 104, 121, 0.3);
     padding: 8px;
     border-radius: 5px;
-}
-
-body p {
-    font-size: 15px;
-    color: rgba(112, 112, 112, 0.5);
 }
 
 .theme p {
