--- a/dark.css
+++ b/dark.css
@@ -99,3 +99,8 @@ form .equal {
     font-size: 20px;
     color: white;
 }
+
+body p {
+    font-size: 15px;
+    color: rgba(255, 255, 255, 0.3);
+}
