--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     outline: none;
     border: none;
     font-size: 20px;
+    box-sizing: border-box;
 }
 
 body {
@@ -27,24 +28,7 @@ body {
     box-shadow: -5px -5px 9px rgba(255, 255, 255, 0.45), 5px 5px 9px rgba(94, 104, 121, 0.3);
 }
 
-form .display-screen {
-    display: flex;
-    justify-content: flex-end;
-    margin: 40px, 0;
-}
-
-form .display-screen input {
-    height: 70px;
-    width: 100%;
-    padding: 0 12px;
-    margin: 10px 0 25px 0;
-    text-align: end;
-    border-radius: 10px;
-    background: transparent;
-    box-shadow: inset -5px -5px 9px rgba(255, 255, 255, 0.45), inset 3px 3px 9px rgba(94, 104, 121, 0.3);
-}
-
-.calculator form .btn {
+.calculator form input {
     color: black;
     background: #DDE1E7;
     height: 50px;
@@ -58,22 +42,27 @@ form .display-screen input {
     box-shadow: -5px -5px 9px rgba(255, 255, 255, 0.45), 3px 3px 9px rgba(94, 104, 121, 0.3);
 }
 
+form .display-screen input {
+    height: 80px;
+    width: 100%;
+    padding: 20px 12px;
+    margin: 10px 0 25px 0;
+    text-align: end;
+    border-radius: 10px;
+    background: transparent;
+    box-shadow: inset -5px -5px 9px rgba(255, 255, 255, 0.45), inset 3px 3px 9px rgba(94, 104, 121, 0.3);
+}
+
+form #equal {
+    width: 120px;
+}
+
 .calculator form .btn:active {
     box-shadow: inset -5px -5px 9px rgba(255, 255, 255, 0.45), inset 3px 3px 9px rgba(94, 104, 121, 0.3);
 }
 
 .calculator form .opt {
     color: tomato;
-}
-
-form .equal {
-    color: white;
-    height: 50px;
-    width: 120px;
-    margin: 5px;
-    border-radius: 10px;
-    background: transparent;
-    box-shadow: -5px -5px 9px rgba(255, 255, 255, 0.45), 3px 3px 9px rgba(94, 104, 121, 0.3);
 }
 
 .theme {
@@ -98,6 +87,41 @@ form .equal {
 }
 
 body p {
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     color: rgba(0, 0, 0, 0.3);
+}
+
+.calculator{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+@media screen and (max-width: 330px){
+
+    .container {
+        min-height: 300px;
+        min-width: 270px;
+    }
+
+    .calculator form input {
+        height: 35px;
+        width: 35px;
+        border-radius: 50%;
+        font-size: 14px;
+        margin: 6px;
+    }
+
+    form #equal {
+        width: 85px;
+        border-radius: 5px;
+    }
+    
+    form .display-screen input {
+        height: 70px;
+        width: 100%;
+        margin: 10px 0 25px 0;
+        border-radius: 10px;
+    }
 }
